src/objects/loan__loan_amortize_balances__c.object
<CustomObject>
    <description>Amortize balances of the loan account</description>
    <fields>
        <fullName>loan__Amortize_Calculation_Method__c</fullName>
        <description>Amortization Method</description>
        <inlineHelpText>It is the method used to calculate the Interest Amortization</inlineHelpText>
        <label>Amortization Method</label>
        <picklist>
            <controllingField>loan__Balance_Type__c</controllingField>
            <picklistValues>
                <fullName>Interest Bearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Amortize_Start_Date__c</fullName>
        <inlineHelpText>Contract date of the loan account.</inlineHelpText>
        <label>Amortization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Amount__c</fullName>
        <description>Balance amount of amortize</description>
        <inlineHelpText>It is the estimated Interest on the loan account.</inlineHelpText>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Type__c</fullName>
        <description>Amortize Balance type</description>
        <inlineHelpText>Balance type which will be amortized.</inlineHelpText>
        <label>Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Paid Fee</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Earned_Balance__c</fullName>
        <description>Earned Balance</description>
        <inlineHelpText>This is zero initially. It is updated when amortization transaction is created.</inlineHelpText>
        <label>Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Enabled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, this balance will be used to compute Interest Amortization</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__First_Amortize_Date__c</fullName>
        <description>First Amortize Date</description>
        <inlineHelpText>This is the first payment date on the loan account.</inlineHelpText>
        <label>First Amortize Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Frequency__c</fullName>
        <description>Amortization Frequency</description>
        <inlineHelpText>This is the frequency of amortization process</inlineHelpText>
        <label>Amortization Frequency</label>
        <picklist>
            <controllingField>loan__Balance_Type__c</controllingField>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Last_Amortize_Calculation_Method__c</fullName>
        <description>Last Amortization Method.</description>
        <inlineHelpText>It is the balance earned in the last Amortization process run</inlineHelpText>
        <label>Last Amortization Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Last_Earned_Balance__c</fullName>
        <description>Last Earned balance</description>
        <inlineHelpText>It is the balance earned in the last Amortization process run</inlineHelpText>
        <label>Last Earned Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Amortize Balances</relationshipLabel>
        <relationshipName>Loan_Amortize_Balances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Next_Amortize_Date__c</fullName>
        <description>Next Amortization Date</description>
        <inlineHelpText>It is the next date when Interest Amortize will run</inlineHelpText>
        <label>Next Amortization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Rate__c</fullName>
        <description>Amortize Rate</description>
        <inlineHelpText>Interest rate using which Interest will be calculated.</inlineHelpText>
        <label>Amortize Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Term__c</fullName>
        <description>Amortized Term</description>
        <inlineHelpText>This is the term of the loan account</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Writtenoff_Balance__c</fullName>
        <description>WriteOff balance</description>
        <label>WriteOff Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__last_Term__c</fullName>
        <description>Last Term</description>
        <inlineHelpText>It is the loan term at the time of last Amortization process run</inlineHelpText>
        <label>Last Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loan Amortize Balances</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Amortization Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Amortize Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>